--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         ideas and thoughts.
       </p>
 
-      <img src="MichealJordan.jpg" height="300" />
+      <img src="../MichealJordan.jpg" height="300" />
     </div>
     <div
       style="
