--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         color: brown;
       "
     >
-      <p>what's guys</p>
+      <p>what's up, guys</p>
       <p>damn,bro</p>
       <p>you know M3</p>
     </div>
